- Add EnvType annotations to various files (it's all EnvType.CLIENT) - Add warning log if it's present on a server - Optimize sending messages to only run during world ticks (instead of client ticks) - Optimize sending periodic messages by improving the randomization and removing a semi-dangerous while loop - Add commands to README.md